--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Chetan is great</h1>
+    <h1 style="color: rebeccapurple;">Chetan is great</h1>
 </body>
 </html>
